--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "clean": "rm -rf dist",
+    "deploy": "npm run clean && npm run build"
+
   },
   "dependencies": {
     "core-js": "^3.6.5",
