--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,7 @@ node_js:
 
 cache: npm
 
-install:
-  - npm install
-
-script:
-  - npm run deploy
+script: npm run deploy
 
 deploy:
   provider: pages
