--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,19 @@
-language: node_js
+node_js:
+  - "lts/*"
+
 node_js:
   - 'node'
 
 cache: npm
 
-install: npm install
+before_install:
+  - npm i -g npm@latest
 
-script: npm run deploy
+install:
+  - npm install
+
+script:
+  - npm run deploy
 
 deploy:
   provider: pages
