--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,7 @@ cache: npm
 before_install:
   - npm i -g npm@latest
 
-install:
-  - npm install
+install: npm install
 
 script:
   - npm run deploy
